# bmp_fractals_cpp

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/BMP/: BMP.cpp  BMP.h  bitmap_header.h  color_table.h  info_header.h
src/benchmarking/: scope_timer.h
src/fractals/: burning_ship.h  fractal_utils.h  julia.h  mandelbrot.h
src/objects/: complex.h  pixel.h  rgb_color.h
